--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": "v18.4.0"
+    "node": "v18.4.0",
+    "npm": "8.14.0"
   },
   "scripts": {
     "start": "nodemon backend/index.js",
