--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "main": "backend/index.js",
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "bootstrap": "^5.2.2",
     "express": "^4.18.1",
     "node": "^18.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-bootstrap": "^2.5.0",
+    "react-router-dom": "^6.4.2"
   },
   "engines": {
     "node": "v18.4.0",
