--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "main": "backend/index.js",
   "type": "module",
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.9",
+    "@mui/styled-engine-sc": "^5.10.6",
     "express": "^4.18.1",
     "node": "^18.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6"
   },
   "engines": {
     "node": "v18.4.0",
