--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@mui/styled-engine-sc": "^5.10.6",
-    "express": "^4.18.1",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "node": "^18.10.0",
     "nodemon": "^2.0.20",
     "react-router-dom": "^6.4.2",
+    "sequelize": "^6.25.1",
     "styled-components": "^5.3.6"
   },
   "engines": {
