Create Collections with additional params

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "course-project",
   "homepage": ".",
-  "proxy": "http://localhost:$(grep PORT .env | cut -d '=' -f2)",
+  "proxy": "http://localhost:$(grep PORT .env | cut -d '=' -f2)/",
   "version": "1.0.0",
   "description": "",
   "main": "backend/index.js",
