--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
